# arpg-simulation-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
data/: abilities.toml
sim/: CMakeLists.txt
sim/include/sim/: ability_definition.hpp  ability_instance.hpp  ability_registry.hpp  ability_system.hpp  ai_behaviour.hpp  ai_system.hpp  command_application.hpp  conditions.hpp  cooldown.hpp  damage.hpp  damage_event.hpp  effect.hpp  effect_context.hpp  effect_execution.hpp  entity_archetype.hpp  entity_archetype_registry.hpp  entity_handle.hpp  entity_stats.hpp  eval_context.hpp  evaluate.hpp  input_command.hpp  input_log.hpp  modifier.hpp  modifier_kinds.hpp  recent_events.hpp  replay.hpp  resolution_context.hpp  sim.hpp  sim_commands.hpp  sim_float.hpp  sim_rng.hpp  spatial_grid.hpp  stat_id.hpp  status_data.hpp  status_instance.hpp  status_list.hpp  status_system.hpp  status_type.hpp  tags.hpp  version.hpp  (+2 more)
sim/include/sim/data/: ability_loader.hpp  archetype_loader.hpp  bootstrap.hpp  enum_lookup.hpp
sim/include/sim/util/: overload.hpp
sim/src/: ability_registry.cpp  ability_system.cpp  ai_system.cpp  command_application.cpp  conditions.cpp  cooldown.cpp  damage.cpp  effect_execution.cpp  entity_archetype_registry.cpp  entity_stats.cpp  evaluate.cpp  input_log.cpp  recent_events.cpp  replay.cpp  sim.cpp  sim_commands.cpp  sim_rng.cpp  spatial_grid.cpp  status_list.cpp  status_system.cpp  version.cpp  world.cpp  world_hash.cpp
sim/src/data/: ability_loader.cpp  archetype_loader.cpp  bootstrap.cpp  enum_lookup.cpp
sim_api/: .clang-tidy  CMakeLists.txt
sim_api/include/sim_api/: sim_api.h
sim_api/src/: abi_layout_check.cpp  sim_api.cpp  sim_opaque.hpp
sim_api/tests/: CMakeLists.txt  test_sim_api.cpp
tests/: CMakeLists.txt  test_ability_data.cpp  test_ability_execution.cpp  test_ai.cpp  test_archetype_loader.cpp  test_chain_effect.cpp  test_conditions.cpp  test_cooldown.cpp  test_crit.cpp  test_data_loading.cpp  test_entity_stats.cpp  test_evaluate.cpp  test_meta_modifiers.cpp  test_modifier.cpp  test_projectile_travel.cpp  test_recent_events.cpp  test_replay.cpp  test_sim.cpp  test_smoke.cpp  test_spatial_grid.cpp  test_status.cpp  test_trigger_effect.cpp  test_world.cpp
unity/arpg-sim-client/Assets/Scenes/: Demo.unity
unity/arpg-sim-client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/arpg-sim-client/Assets/Sim/Art/Materials/: Enemy.mat  Player.mat
unity/arpg-sim-client/Assets/Sim/Art/Prefabs/: Enemy.prefab  Player.prefab
unity/arpg-sim-client/Assets/Sim/Data/: CoreSettings.asset  EntityVisualSettings.asset  abilities.toml  archetypes.toml
unity/arpg-sim-client/Assets/Sim/Runtime/: Sim.Runtime.asmdef
unity/arpg-sim-client/Assets/Sim/Runtime/Core/: CoreSettings.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Installers/: SimInstaller.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Model/: SimRunner.cs  SimSnapshot.cs  SnapshotCopier.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Native/: Sim.asmdef  SimNative.cs  SimNativeStructs.cs  SimSafeHandle.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Utils/: Logger.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Utils/Extensions/: Logger.cs  SignalBusExtensions.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Utils/Importers/: TomlImporter.cs
unity/arpg-sim-client/Assets/Sim/Runtime/Visuals/: EntityKind.cs  EntityRegistry.cs  EntityVisual.cs  EntityVisualSettings.cs
unity/arpg-sim-client/Assets/Sim/Tests/Editor/: Sim.Tests.asmdef  SimNativeTests.cs
unity/arpg-sim-client/ProjectSettings/: ProjectSettings.asset
